--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,12 @@ version: '3'
 
 services:
   app:
-    build:
-      context: .
-      dockerfile: Dockerfile
-      args:
-        BASE_PATH: /test
+    image: alexvorobev/simpledir
+    # build:
+    #   context: .
+      # dockerfile: Dockerfile
+      # args:
+      #   BASE_PATH: /test
     environment:
       # Runtime environment variables
       PORT: 3000
